envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 14000 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route:
                  #retry_policy:
                    #retry_host_predicate:
                    #- name: envoy.retry_host_predicates.previous_hosts
                    #host_selection_retry_max_attempts: 3
                    #retry_on: "5xx"
                    #num_retries: 3
                    #per_try_timeout_ms: 2000
                  host_rewrite:  ${SERVICE_NAME}
                  cluster: myapp_cluster
                  timeout: 60s
          http_filters:
          - name: envoy.router
  clusters:
  - name: myapp_cluster
    connect_timeout: 0.25s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ${ENVOY_LB_ALG}
    hosts: [{ socket_address: { address: ${SERVICE_NAME}, port_value: 14000 }}]
